--- a/tcc/capitulos/capitulo4.tex
+++ b/tcc/capitulos/capitulo4.tex
@@ -104,25 +104,25 @@ Tópicos relacionados com o cenário político nacional:
   \item
   \textit{Brazil Seeks To Copy U.S. Gun Culture ``to allow embattled
   citizens the right to defend themselves from
-  criminals''}\footnote{
-  \url{https://www.reddit.com/r/worldnews/comments/36ny58/brazil_blogger_known_for_reporting_on_corruption/}}.
+  criminals''} - Disponível em: 
+  \url{https://www.reddit.com/r/worldnews/comments/36ny58/brazil_blogger_known_for_reporting_on_corruption/}.
   \item
-  \textit{Brazil descends into chaos as Olympics looms}\footnote{
-  \url{https://www.reddit.com/r/worldnews/comments/4bqcc3/brazil_descends_into_chaos_as_olympics_looms/}}.
+  \textit{Brazil descends into chaos as Olympics looms} - Disponível em: 
+  \url{https://www.reddit.com/r/worldnews/comments/4bqcc3/brazil_descends_into_chaos_as_olympics_looms/}.
   \item
   \textit{Plane carrying Brazil Supreme Court judge crashes into sea}
-  \footnote{\url{https://www.reddit.com/r/worldnews/comments/5oyz3b/plane_carrying_brazil_supreme_court_judge_crashes/}}.
+   - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/5oyz3b/plane_carrying_brazil_supreme_court_judge_crashes/}.
   \item
   \textit{Brazil passes Internet governance Bill: Brazil has made history with
-  the approval of a post-Snowden Bill which sets out principles, rights and guarantees for Internet users.}\footnote{\url{https://www.reddit.com/r/worldnews/comments/21f3as/brazil_passes_internet_governance_bill_brazil_has/}}.
+  the approval of a post-Snowden Bill which sets out principles, rights and guarantees for Internet users.} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/21f3as/brazil_passes_internet_governance_bill_brazil_has/}.
   \item
   \textit{FIFA generated more than \$4 billion in sales from the 2014 World Cup,
   and is Giving Brazil \$100 Million After The Country Spent \$15 Billion On The
-  World Cup}\footnote{\url{https://www.reddit.com/r/worldnews/comments/2t65ql/fifa_generated_more_than_4_billion_in_sales_from/}}.
+  World Cup} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/2t65ql/fifa_generated_more_than_4_billion_in_sales_from/}.
   \item
   \textit{Brazil Seeks To Copy U.S. Gun Culture "to allow embattled citizens the
   right to defend themselves from
-  criminals"}\footnote{\url{https://www.reddit.com/r/worldnews/comments/3skpe7/brazil_seeks_to_copy_us_gun_culture_to_allow/}}.
+  criminals"} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/3skpe7/brazil_seeks_to_copy_us_gun_culture_to_allow/}.
 \end{itemize}
 
 Tópicos relacionados sobre política internacional.
@@ -132,38 +132,38 @@ Tópicos relacionados sobre política internacional.
   global industry led by major banks, legal firms, and asset management companies
   secretly manages the estates of politicians, Fifa officials, fraudsters and
   drug smugglers, celebrities and professional
-  athletes."}.\footnote{\url{https://www.reddit.com/r/worldnews/comments/4d75i7/26_terabyte_leak_of_panamanian_shell_company_data/}}.
+  athletes."}. - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/4d75i7/26_terabyte_leak_of_panamanian_shell_company_data/}.
   \item
   \textit{Fidel Castro is dead at
-  90.}\footnote{\url{https://www.reddit.com/r/worldnews/comments/5exz2e/fidel_castro_is_dead_at_90/}}.
+  90.} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/5exz2e/fidel_castro_is_dead_at_90/}.
   
   \item
-  \textit{Donald Trump to strip all funding from State Dept team promoting women's rights around the world - Leaked plan comes as First Daughter Ivanka defends her father's record with women}\footnote{\url{https://www.reddit.com/r/worldnews/comments/67ivae/donald_trump_to_strip_all_funding_from_state_dept/}}.
+  \textit{Donald Trump to strip all funding from State Dept team promoting women's rights around the world - Leaked plan comes as First Daughter Ivanka defends her father's record with women} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/67ivae/donald_trump_to_strip_all_funding_from_state_dept/}.
   
   \item
-  \textit{Manchester Arena 'explosions': Two loud bangs heard at MEN Arena}\footnote{\url{https://www.reddit.com/r/worldnews/comments/6cqdye/manchester_arena_explosions_two_loud_bangs_heard/}}.
+  \textit{Manchester Arena 'explosions': Two loud bangs heard at MEN Arena} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/6cqdye/manchester_arena_explosions_two_loud_bangs_heard/}.
   
   \item
   \textit{Sweden asks the U.S. to explain Trump comment on
-  Sweden}\footnote{\url{https://www.reddit.com/r/worldnews/comments/5uzetf/sweden_asks_the_us_to_explain_trump_comment_on/}}
+  Sweden} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/5uzetf/sweden_asks_the_us_to_explain_trump_comment_on/}
   
   \item\textit{“Canada will welcome you,” Trudeau invites refugees as Trump bans
-  them}\footnote{\url{https://www.reddit.com/r/worldnews/comments/5qqa51/canada_will_welcome_you_trudeau_invites_refugees/}}
+  them} - Disponível em: \url{https://www.reddit.com/r/worldnews/comments/5qqa51/canada_will_welcome_you_trudeau_invites_refugees/}
 \end{itemize}
 
 Tópicos diversos.
 \begin{itemize}
   \item
   \textit{I’m Bill Gates, co-chair of the Bill \& Melinda Gates Foundation. Ask
-  Me Anything.}\footnote{\url{https://www.reddit.com/r/IAmA/comments/5whpqs/im_bill_gates_cochair_of_the_bill_melinda_gates/}}.
+  Me Anything.} - Disponível em: \url{https://www.reddit.com/r/IAmA/comments/5whpqs/im_bill_gates_cochair_of_the_bill_melinda_gates/}.
   \item
-  \textit{Hey, it's Lars from Metallica. AMA}\footnote{\url{https://www.reddit.com/r/IAmA/comments/1wl9ic/hey_its_lars_from_metallica_ama/}}.
+  \textit{Hey, it's Lars from Metallica. AMA} - Disponível em: \url{https://www.reddit.com/r/IAmA/comments/1wl9ic/hey_its_lars_from_metallica_ama/}.
   
   \item
-  \textit{I'm the CEO of Renault and Nissan and we're making autonomous driving vehicles happen by 2020. Ask me anything!}\footnote{\url{https://www.reddit.com/r/IAmA/comments/2s7obx/im_the_ceo_of_renault_and_nissan_and_were_making/}}.
+  \textit{I'm the CEO of Renault and Nissan and we're making autonomous driving vehicles happen by 2020. Ask me anything!} - Disponível em: \url{https://www.reddit.com/r/IAmA/comments/2s7obx/im_the_ceo_of_renault_and_nissan_and_were_making/}.
   
   \item
-  \textit{I am Julian Assange founder of WikiLeaks -- Ask Me Anything}\footnote{\url{https://www.reddit.com/r/IAmA/comments/5n58sm/i_am_julian_assange_founder_of_wikileaks_ask_me/}}.
+  \textit{I am Julian Assange founder of WikiLeaks -- Ask Me Anything} - Disponível em: \url{https://www.reddit.com/r/IAmA/comments/5n58sm/i_am_julian_assange_founder_of_wikileaks_ask_me/}.
   
 \end{itemize}
 
