--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -7,9 +7,9 @@ Linguagem Natural, é o termo utilizado para descrever um software ou componente
 de hardware que tem como função analisar a linguagem escrita ou falada
 \cite{jacksonmoulinier2007}.
 
-Existem duas abordagens de Processamento de Linguagem Natural, sendo que a
-primeira delas é chamada de simbólica ou racionalista e a outra de empírica ou
-estatística.
+Existem duas abordagens para o Processamento de Linguagem Natural, sendo que a
+primeira delas é chamada de simbólica (ou racionalista) e a outra de empírica
+(ou estatística).
 A primeira abordagem consiste em uma série de regras para a manipulação de
 símbolos, como as regras gramaticais, que permitem identificar se uma frase está malformada ou não. A abordagem empírica está centrada na análise estatística da linguagem através de grandes quantidades
 de textos, como por exemplo, a utilização de modelos de Markov para reconhecer padrões
@@ -35,15 +35,15 @@ de imagens engraçadas, etc.
 Nestas comunidades é possível visualizar e comentar \textit{links} enviados por
 outros usuários.
 Além disso, o usuário pode efetuar um voto de forma positiva, caso acredite que
-aquele \textit{link} é útil para a comunidade ou, é possível
-efetuar um voto negativo em caso contrário.
+aquele \textit{link} é útil para a comunidade, ou um voto negativo em caso
+contrário.
 Uma vez que os próprios usuários podem submeter \textit{links}, os eventos e
 notícias de todo o mundo são reportados no \textit{website}, como exemplo,
 pode-se citar as eleições ocorridas no ano de 2016 nos Estados Unidos e o
-tiroteio ocorrido em Paris no dia 15 de Novembro de 2015.
+tiroteio ocorrido em Paris em 15 de Novembro de 2015.
 
-Neste trabalho será desenvolvido um software que permita realizar a
-análise dos comentários do \textit{website} Reddit. Mais
+Dentro deste contexto neste trabalho será desenvolvido um software que permita
+realizar a análise dos comentários do \textit{website} Reddit. Mais
 especificamente os comentários do Reddit serão analisados com o objetivo de
 identificar padrões de sentimentos, ou seja, determinar se a opinião expressada com relação a um determinado tópico é neutra, positiva ou negativa.
 
@@ -57,7 +57,8 @@ trabalho, os seguintes objetivos específicos devem ser realizados:
   \item Desenvolver uma ferramenta para o Processamento Natural de Linguagem através de
 \textit{frameworks} já existentes.
  \item Construção de uma base de dados a partir do \textit{website} Reddit.
- \item Efetuar o processamento da base de dados utilizando a ferramenta desenvolvida.
+ \item Efetuar o processamento da base de dados criado utilizando-se a
+ ferramenta desenvolvida.
 \end{itemize}
 
 \section{Estrutura do Trabalho}
