--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -111,6 +111,7 @@ Banca examinadora:\par
 \acro{VADER}[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
 \acro{JSON}[JSON]{\textit{JavaScript Object Notation}}
 \acro{POJO}[POJO]{\textit{Plain Old Java Objects}}
+\acro{SVM}[SVM]{\textit{Support Vector Machines}}
 \end{acronym}
 \listoffigures
 \listoftables
