--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -19,7 +19,20 @@ extraction and categorization",
   year      = "1999",
   publisher = "MIT Press"
 }
-
+@inproceedings{Pang:2002:TUS:1118693.1118704,
+ author = {Pang, Bo and Lee, Lillian and Vaithyanathan, Shivakumar},
+ title = {Thumbs Up?: Sentiment Classification Using Machine Learning Techniques},
+ booktitle = {Proceedings of the ACL-02 Conference on Empirical Methods in Natural Language Processing - Volume 10},
+ series = {EMNLP '02},
+ year = {2002},
+ pages = {79--86},
+ numpages = {8},
+ url = {https://doi.org/10.3115/1118693.1118704},
+ doi = {10.3115/1118693.1118704},
+ acmid = {1118704},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
 @article{domingos97naivebayes,
   added-at = {2009-07-24T18:17:24.000+0200},
   author = {Domingos, Pedro and Pazzani, Michael J.},
